TypedLama/regression/compile_error/test001.2.lama
local promise :: Int -> Str; -- TODO just type declaration (should fail, because it is shallow type declaration without definition)

promise := "kek" -- for skipping test